<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings"
    android:padding="10dp"
    android:background="#DB0C090A">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:background="@drawable/imgback"
        android:orientation="vertical">

        <Switch
            android:id="@+id/savim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="1dp"
            android:textColor="#ffffff"
            android:text="@string/save_qr"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="#cfcfcf"
            android:text="@string/save_the_created_qr_code_in_storage"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:background="@drawable/imgback"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_directory"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:paddingBottom="1dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_the_destination_to_save_the_qr_image"
            android:textSize="10sp"
            android:textColor="#cfcfcf"
            android:id="@+id/direc"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:background="@drawable/imgback"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_developer"
            android:textSize="18sp"
            android:paddingBottom="1dp"
            android:textColor="#ffffff"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="#cfcfcf"
            android:text="@string/if_you_wish_to_donate_developer_with_money_you_can_do_so"
            tools:ignore="SmallSp" />

    </LinearLayout>


</LinearLayout>