<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#DB0C090A"
    tools:context=".MainActivity">





    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="75dp" />

            <ImageView
                android:layout_width="169dp"
                android:layout_height="138dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/mainp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/scan"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btnback"
                android:text="@string/scan"
                android:textAllCaps="false"
                android:textSize="20sp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/create"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btnback"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textSize="20sp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="220dp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9025755371161858/5780687323" />


</RelativeLayout>