<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DB0C090A"
    android:orientation="vertical"
    tools:context=".CreateQR"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:background="@drawable/imgback"
                android:contentDescription="@string/todo"
                android:src="@drawable/qrlgo"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="127dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="10sp"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:layout_margin="@dimen/cardview_default_radius"
                android:background="@drawable/imgback"
                tools:ignore="PrivateResource">

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:counterEnabled="true"
                    ads:counterMaxLength="200"
                    ads:counterTextColor="@android:color/white"
                    android:textColorHint="#cfcfcf"
                    ads:errorTextColor="#303F9F"
                    tools:ignore="PrivateResource">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_text"
                        android:inputType="text"
                        android:textColorHint="#ffffff"
                        android:textColor="#ffffff"/>
                </com.google.android.material.textfield.TextInputLayout>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />


                <Button
                    android:id="@+id/btn1"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btnback"
                    android:elevation="10dp"
                    android:padding="10dp"
                    android:textAllCaps="false"
                    android:text="@string/create_and_save_qr"
                    android:textSize="20sp" />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="60dp"
                android:text="@string/help"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-9025755371161858/8402171103" />


</RelativeLayout>